Fix truncated Facebook page plugin
The earlier iframe based Facebook plugin used different sizes depending
on whether face pictures were loaded or not. This led to truncated
display of face pictures when the plugin iframe code was generated when
no face pictures were loading (e.g. when there were not enough likes to
the Facebook page).

This issue is being fixed by replacing the iframe based plugin with
JavaScript based plugin.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -21,7 +21,7 @@ a:hover, a:active {
     text-decoration: underline
 }
 
-nav div, header, main, footer div {
+nav div, header, main, footer > div {
     max-width: 40em;
     margin-left: auto;
     margin-right: auto;
@@ -88,13 +88,17 @@ footer {
     background: #f0f0f0;
     border-top: thin solid #e0e0e0;
     margin-top: 1em;
-    padding-top: 2em;
+    padding-top: 1.25em;
     padding-bottom: 1em;
 }
 
 footer .links a {
     margin-right: 1em;
     font-size: 0.7em;
+}
+
+.fb-page {
+    margin-bottom: 0.5em;
 }
 
 
